# watching-zenoh

./: .gitignore  .gitmodules  .mcp.json  ARCHITECTURE.md  CLAUDE.md  COMMIT_FORMAT.md  LICENSE  LICENSE-COMMERCIAL.md  README.ko.md  README.md  THIRD_PARTY.md  mnemosyne.toml
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
crates/: Cargo.toml
crates/lwip-sys/: Cargo.toml  build.rs  wrapper.h
crates/lwip-sys/port/cross-test/: lwipopts.h
crates/lwip-sys/port/cross-test/arch/: cc.h
crates/lwip-sys/port/include/: lwipopts.h
crates/lwip-sys/port/include/arch/: cc.h
crates/lwip-sys/src/: lib.rs
crates/wz/: Cargo.toml  build.rs
crates/wz-ap-demo/: Cargo.toml
crates/wz-ap-demo/src/: args.rs  link_driver.rs  main.rs  runner.rs  shutdown.rs  tasks.rs  teardown.rs  usage.rs
crates/wz-codecs/: Cargo.toml  build.rs
crates/wz-codecs-test-support/: Cargo.toml
crates/wz-codecs-test-support/src/: lib.rs
crates/wz-codecs/src/: lib.rs
crates/wz-codecs/tests/: smoke.rs
crates/wz-e2e-declare-observer/: Cargo.toml
crates/wz-e2e-declare-observer/src/: main.rs
crates/wz-e2e-harness/: Cargo.toml
crates/wz-e2e-harness/src/: lib.rs
crates/wz-e2e-liveliness/: Cargo.toml
crates/wz-e2e-liveliness-token/: Cargo.toml
crates/wz-e2e-liveliness-token/src/: main.rs
crates/wz-e2e-liveliness/src/: main.rs
crates/wz-e2e-pubsub/: Cargo.toml
crates/wz-e2e-pubsub/src/: main.rs
crates/wz-e2e-queryable/: Cargo.toml
crates/wz-e2e-queryable/src/: main.rs
crates/wz-e2e-zget/: Cargo.toml
crates/wz-e2e-zget/src/: main.rs
crates/wz-integration-tests/: Cargo.toml
crates/wz-integration-tests/src/: lib.rs
crates/wz-integration-tests/tests/: ap_demo_round_trip.rs  hal_timer_routing.rs  layer3_close.rs  layer3_declare.rs  layer3_ext_chain_outbound.rs  layer3_ext_envelope.rs  layer3_fragment.rs  layer3_frame.rs  layer3_hello.rs  layer3_inbound_declare.rs  layer3_inbound_ext_chain.rs  layer3_inbound_init.rs  layer3_init_body.rs  layer3_interest.rs  layer3_join.rs  layer3_keep_alive.rs  layer3_keyexpr_canon.rs  layer3_keyexpr_intersect.rs  layer3_msg_del.rs  layer3_msg_put.rs  layer3_oam.rs  layer3_open_body.rs  layer3_push.rs  layer3_request.rs  layer3_response.rs  layer3_response_final.rs  layer3_scout.rs  link_emitter_b6.rs  r300_outbound_keyexpr_gate.rs  wz_ap_demo_query_timeout.rs  wz_e2e_declare_observer_to_zsub.rs  wz_e2e_liveliness_to_zliveliness.rs  wz_e2e_liveliness_token_to_zget_liveliness.rs  wz_e2e_pubsub_to_zsub.rs  wz_e2e_queryable_to_zget.rs  wz_e2e_zget_to_zqueryable.rs  wz_initiator_to_wz_acceptor.rs  wz_initiator_to_zsub.rs  wz_liveliness_subscriber_round_trip.rs  wz_publisher_aliased_to_zsub.rs  (+5 more)
crates/wz-link-lwip/: Cargo.toml  build.rs
crates/wz-link-lwip/src/: lib.rs
crates/wz-runtime-core/: Cargo.toml
crates/wz-runtime-core/src/: allocator.rs  error.rs  lib.rs  runtime.rs  time.rs
crates/wz-runtime-lwip/: Cargo.toml  build.rs
crates/wz-runtime-lwip/src/: atomic.rs  executor.rs  join_handle.rs  lib.rs  runtime_impl.rs  sce_link_runtime_lwip.c  sync.rs  time.rs  timer.rs  wz_runtime_lwip.h
crates/wz-runtime-tokio/: Cargo.toml  build.rs
crates/wz-runtime-tokio-test-support/: Cargo.toml
crates/wz-runtime-tokio-test-support/src/: lib.rs
crates/wz-runtime-tokio/src/: declare.rs  keyexpr_canon.rs  lib.rs  link_pipeline.rs  locality.rs  observer.rs  pubsub.rs  query.rs  query_event.rs  reply.rs  runtime_impl.rs  sample.rs  scouting_glue.rs  script_bind.rs  session.rs  session_glue.rs  session_open.rs  sync.rs  udp_pipeline.rs
crates/wz-runtime-tokio/src/declare/: cross_tests.rs  liveliness.rs  liveliness_subscriber.rs  queryable.rs  subscriber.rs  test_helpers.rs
crates/wz-runtime-tokio/tests/: accept_and_open_session.rs  connect_and_open_session.rs  echo_demo.rs  echo_demo_del_and_udp.rs  link_pipeline.rs  outbound_dial.rs  scouting_multicast_loopback.rs  session_fsm_accepting_path.rs  session_fsm_coverage.rs  session_fsm_drive_session.rs  session_fsm_driver_loop.rs  session_fsm_engine_drive.rs  session_fsm_full_path.rs  session_fsm_handshake_timeout.rs  session_fsm_inbound_dispatch.rs  session_fsm_lease_deadline.rs  session_fsm_real_tcp.rs  session_glue_dispatch.rs  static_scout_open.rs  tcp_driver_cancel_safety.rs
crates/wz-session-core/: Cargo.toml
crates/wz-session-core-test-support/: Cargo.toml
crates/wz-session-core-test-support/src/: lib.rs
crates/wz-session-core/src/: action_trace.rs  close_reason.rs  declare.rs  driver_loop.rs  ext_chain_role.rs  keyexpr_canon.rs  keyexpr_match.rs  lease.rs  lib.rs  link.rs  locality.rs  locator.rs  metadata.rs  network_message.rs  observer.rs  parse_error.rs  peer_init_caps.rs  pubsub.rs  qos.rs  query.rs  query_event.rs  query_mode.rs  reliability.rs  reply.rs  request_build.rs  response_build.rs  response_sink.rs  sample.rs  scout_params.rs  scout_static.rs  scout_trace.rs  send_declare_error.rs  session_init_params.rs  signing_key.rs  source_info_ext.rs  wireexpr_resolve.rs
crates/wz-session-core/src/declare/: cross_tests.rs  liveliness.rs  liveliness_sample.rs  liveliness_subscriber.rs  local_token.rs  queryable.rs  subscriber.rs  test_helpers.rs
crates/wz/src/: lib.rs
crates/zenoh-pico-sys/: Cargo.toml  build.rs  wrapper.h
crates/zenoh-pico-sys/src/: lib.rs
crates/zenoh-pico-sys/tests/: ffi_smoke.rs
deploy/: README.md  ap_mcu_pair.yaml  ap_standalone.yaml  mcu_target.yaml
deploy/mcu-qemu-demo/: Cargo.toml  build.rs  memory-microbit.x  memory.x
deploy/mcu-qemu-demo/.cargo/: config.toml
deploy/mcu-qemu-demo/src/: main.rs
docs/: feature_inventory.md  intrinsics-runtime-symbols.md  oq-w15-ratification-summary.md  reassembly-fsm.md  rfc-open-questions-log.md  rfc-sce-protocol-synthesis.md  runtime-crate-lwip.md  runtime-crate-tokio.md  scouting-fsm.md  session-fsm.md  wire-spec-subset.md
notes/: SESSION_KICKOFF.md
scripts/: audit-mid-values.sh  build-sce.sh  build-zenoh-pico-cli.sh  check-footprint.sh  measure-codec-footprint.sh  run-ci.sh  validate-deploy.sh  verify-codegen.sh
sources/: README.md
(+63 files in other folders)
