# SPDX-License-Identifier: LGPL-3.0-or-later OR LicenseRef-watching-zenoh-Commercial
# SPDX-FileCopyrightText: Copyright (c) 2026 newmassrael
#
# watching-zenoh — Rust runtime workspace (Phase 2 walking skeleton).
#
# Houses the host-side Rust crates that consume sce-codegen output and
# expose the wire-codec / link-runtime / intrinsics surface to AP
# (Linux+tokio) and MCU (Cortex-M + lwIP via FFI) deploy targets. This
# workspace is intentionally separate from `vendor/sce/Cargo.toml` so
# the watching-zenoh build does not perturb SCE's own self-test
# workspace; path dependencies into `vendor/sce/*` cross the workspace
# boundary explicitly.
#
# Initial member set (R40 walking skeleton):
#   - wz-codecs : hosts sce-codegen Rust output for codec-kind SCXMLs
#                 in sources/codecs/. build.rs runs the codegen
#                 in-process via sce-build (same pattern SCE's own
#                 sce-forge-runtime/rust/build.rs uses for the
#                 numerical conformance harness).
#
# Subsequent rounds will add:
#   - wz-runtime-tokio       (R42+, sce_link_runtime_tokio impl)
#   - wz-runtime-lwip        (R42+, sce_link_runtime_lwip C11 sibling)
#   - zenoh-pico-sys         (R41, FFI bindings to vendored zenoh-pico)
#   - wz-integration-tests   (R41+, Layer 3 wire-interop test harness)
#   - wz                     (R302a, top-level facade crate hosting the
#                              169-feature catalog from R301; no source
#                              gates wired yet, pure feature labels).

[workspace]
resolver = "2"
members = [
    "wz",
    "wz-codecs",
    "wz-runtime-core",
    "wz-session-core",
    "wz-session-core-test-support",
    "zenoh-pico-sys",
    "wz-integration-tests",
    "wz-runtime-tokio",
    "wz-runtime-tokio-test-support",
    "wz-ap-demo",
    "wz-e2e-harness",
    "wz-e2e-pubsub",
    "wz-e2e-queryable",
    "wz-e2e-liveliness",
    "wz-e2e-liveliness-token",
    "wz-runtime-lwip",
    "lwip-sys",
    "wz-link-lwip",
    # lwip-sys — R311az-1 (Phase W §5.C link tier dependency). FFI
    # bindings to vendored lwIP 2.2.1 (vendor/lwip submodule pin
    # STABLE-2_2_1_RELEASE / 77dcd25a). Host build via cc::Build
    # statically compiling the NO_SYS=1 + UDP-minimal source set;
    # bindgen emits the R311az-2 surface allowlist (6 udp_* + pbuf +
    # netif lifecycle). Cross-compile to MCU targets is the deploy
    # crate's responsibility (R311az-pre D7); lwip-sys ships only the
    # host build at R311az-1.
    #
    # wz-runtime-lwip — R311au scope C reintroduction (Phase W).
    # R53 NOP-stub skeleton was removed at R63 as a
    # document-around-the-hack pattern (NOP spawn + multi-paragraph
    # "intentionally NOP" justification). R311au lands a deliberately
    # narrower scope: sync primitive aliases ONLY
    # (`critical_section::Mutex<RefCell<T>>` per-runtime alias for the
    # MCU profile half of the R311w decision). LwipRuntime + the
    # `impl Runtime` half + the lwIP-sys FFI bridge stay deferred to
    # subsequent rounds; this reintroduction is production-honest
    # because every item shipped is a real working primitive (no NOP
    # spawn, no stubbed Runtime impl). See
    # crates/wz-runtime-lwip/{Cargo.toml,src/lib.rs} for the full
    # scope statement.
    #
    # The SCE B6 link C11 emitter end-to-end validation that the
    # earlier deleted crate proved remains preserved as a Layer-3-
    # style test in wz-integration-tests/tests/link_emitter_b6.rs;
    # R311au does not relitigate that validation.
    #
    # wz-ap-demo added at R121a — first non-library deploy artifact
    # (AP MVP demo binary; Phase D.1). The rest of the workspace
    # remains library crates. See crates/wz-ap-demo/Cargo.toml for
    # the round rollout (R121a skeleton → R121b functional → R121c
    # integration test + CI Layer E).
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
license = "LGPL-3.0-or-later OR LicenseRef-watching-zenoh-Commercial"
authors = ["newmassrael <newmassrael@gmail.com>"]
repository = "https://github.com/newmassrael/watching-zenoh"
readme = "../README.md"

# Production lint policy: any warning fails the build. Per-crate opt-in
# via `[lints] workspace = true`. Generated-code crates may add local
# `#[allow(...)]` annotations but the workspace gate stays strict.
[workspace.lints.rust]
warnings = "deny"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
