# SPDX-License-Identifier: LGPL-3.0-or-later OR LicenseRef-watching-zenoh-Commercial
# SPDX-FileCopyrightText: Copyright (c) 2026 newmassrael
#
# wz-ap-demo — AP (Application Processor; Linux + tokio runtime) MVP
# demo binary. The first non-library deploy artifact in the workspace
# (wz-codecs / wz-runtime-tokio / wz-runtime-tokio-test-support /
# wz-integration-tests / zenoh-pico-sys are all libraries).
#
# Phase D.1 entry (R121+ rollout). Drives wz-runtime-tokio +
# wz-codecs end-to-end via an external zenoh-pico CLI peer (z_put,
# z_get) so each round-trip round verifies the wz codec catalog +
# session FSM + DECLARE registry against a production-realistic
# foreign implementation — not against another wz process.
#
# Naming rationale:
#   - "ap" = deploy class (matches deploy/ap_*.yaml; mcu-demo + other
#     deploy-class siblings follow the same crate naming convention).
#   - "demo" = MVP-stage marker. When the production AP deploy
#     artifact (driven by deploy/ap_standalone.yaml) lands as a
#     promotion path, the crate moves to crates/wz-deploy-ap/ (or
#     similar) and this demo binary either co-exists for regression
#     coverage or retires.
#
# Round rollout:
#   - R121a (this round): crate skeleton — CLI argv shape locked,
#     no runtime behavior (deps = none). Establishes the binary
#     entry point without faking session/codec functionality.
#   - R121b: session FSM start + DECLARE subscriber + msg_put
#     inbound dispatch wiring (real wz-runtime-tokio + wz-codecs
#     dependencies added here).
#   - R121c: integration test harness driving external zenoh-pico
#     z_put against this binary + CI Layer E lane.

[package]
name = "wz-ap-demo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "AP MVP demo binary — exercises wz-runtime-tokio + wz-codecs against an external zenoh-pico CLI peer for round-trip wire interop."

[[bin]]
name = "wz-ap-demo"
path = "src/main.rs"

# R121b dependency policy: real session FSM + codec stack wired below.
# Each dep has a first call site in src/main.rs; workspace.lints.rust=
# deny would surface any unused-dep regression.
[dependencies]
# wz session FSM glue + tokio adapter + pubsub subscriber registry.
wz-runtime-tokio = { path = "../wz-runtime-tokio" }
# R253 — TimeSource trait surface (used by declare_task generic
# parameter so wz-ap-demo no longer reaches for tokio::time::sleep
# directly; the AP-profile concrete impl `TokioTime` is re-exported
# from wz-runtime-tokio and supplied at the spawn call site).
wz-runtime-core = { path = "../wz-runtime-core", features = ["std"] }
# Generated codec types for inbound Push decode + outbound handshake.
wz-codecs = { path = "../wz-codecs" }
# SCE Rust runtime — Engine + IScriptEngine trait surface for the
# session FSM script-action engine.
sce-rust-runtime = { path = "../../vendor/sce/sce-rust-runtime" }
# Lua-backed IScriptEngine implementation that drives the 17 session
# FSM script-actions (link_driver_open / send_init_syn / ...).
sce-rust-lua = { path = "../../vendor/sce/sce-rust-lua" }
# Tokio multi-thread runtime — required by TokioLinkDriverAdapter's
# block_on contract per session_glue.rs:445.
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "sync", "time"] }
# Logging plumbing — env_logger reads RUST_LOG / WZ_DEMO_LOG to
# surface session FSM transitions + subscriber dispatch events.
log = "0.4"
env_logger = "0.11"

[lints]
workspace = true
