# SPDX-License-Identifier: LGPL-3.0-or-later OR LicenseRef-watching-zenoh-Commercial
# SPDX-FileCopyrightText: Copyright (c) 2026 newmassrael
#
# wz-ap-demo — AP (Application Processor; Linux + tokio runtime) MVP
# demo binary. The first non-library deploy artifact in the workspace
# (wz-codecs / wz-runtime-tokio / wz-runtime-tokio-test-support /
# wz-integration-tests / zenoh-pico-sys are all libraries).
#
# Phase D.1 entry (R121+ rollout). Drives wz-runtime-tokio +
# wz-codecs end-to-end via an external zenoh-pico CLI peer (z_put,
# z_get) so each round-trip round verifies the wz codec catalog +
# session FSM + DECLARE registry against a production-realistic
# foreign implementation — not against another wz process.
#
# Naming rationale:
#   - "ap" = deploy class (matches deploy/ap_*.yaml; mcu-demo + other
#     deploy-class siblings follow the same crate naming convention).
#   - "demo" = MVP-stage marker. When the production AP deploy
#     artifact (driven by deploy/ap_standalone.yaml) lands as a
#     promotion path, the crate moves to crates/wz-deploy-ap/ (or
#     similar) and this demo binary either co-exists for regression
#     coverage or retires.
#
# Round rollout:
#   - R121a (this round): crate skeleton — CLI argv shape locked,
#     no runtime behavior (deps = none). Establishes the binary
#     entry point without faking session/codec functionality.
#   - R121b: session FSM start + DECLARE subscriber + msg_put
#     inbound dispatch wiring (real wz-runtime-tokio + wz-codecs
#     dependencies added here).
#   - R121c: integration test harness driving external zenoh-pico
#     z_put against this binary + CI Layer E lane.

[package]
name = "wz-ap-demo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "AP MVP demo binary — exercises wz-runtime-tokio + wz-codecs against an external zenoh-pico CLI peer for round-trip wire interop."

[[bin]]
name = "wz-ap-demo"
path = "src/main.rs"

# R311a4 — wz-ap-demo collapses 6 direct sub-crate deps to a single
# `wz` facade dep with `preset-ap-client` features. This makes the
# facade the first user-visible composable-framework boundary backed
# by a real Linux + tokio binary: when `cargo build -p wz-ap-demo`
# succeeds, the wz facade's preset-ap-client contract is mechanically
# proven to cover every symbol path this binary requires.
#
# `preset-ap-client` (defined in wz facade Cargo.toml line 581+) pulls
# in: platform-linux + runtime-tokio + transport-link-{tcp,udp} +
# unicast session machinery + 12 codec features (init-body, open-body,
# frame, fragment, keep-alive, scout, hello, close, push, declare,
# request, response, response-final) + 7 declare features +
# 6 query features + liveliness-{token,subscriber} + 8 keyexpr + ...
#
# The `runtime-tokio` umbrella feature in turn pulls 4 facade-level
# optional deps (wz-runtime-tokio + wz-runtime-core + sce-rust-runtime
# + sce-rust-lua) so wz-ap-demo's source code reaches every needed
# symbol via stable `wz::runtime_tokio::*`, `wz::runtime_core::*`, and
# `wz::script::*` paths — no direct wz-runtime-tokio / wz-codecs /
# vendor/sce dep mentions remain in this manifest.
#
# `tokio` + `log` + `env_logger` stay as direct deps because the demo
# binary's main entry (#[tokio::main]) and stderr logger pipeline are
# binary-shaped concerns, not part of the wz framework re-export
# surface. The wz facade does not re-export tokio's runtime macros or
# env_logger by design.
[dependencies]
# `default-features = false` here gives the R311a4 binary-size delta
# measurement script (scripts/measure-codec-footprint.sh) a clean
# `--no-default-features --features wz/foo,wz/bar,...` invocation that
# can elide any individual atomic feature without the wz facade's
# preset-ap-client default forcibly turning it back on. Production
# `cargo run -p wz-ap-demo` still gets the full preset because this
# crate's own `default = ["preset-ap-client"]` below re-enables it.
wz = { path = "../wz", default-features = false }
# Tokio multi-thread runtime — required by TokioLinkDriverAdapter's
# block_on contract per session_glue.rs:445; the #[tokio::main] entry
# attribute and `tokio::signal::ctrl_c` are binary-shaped uses outside
# the wz framework boundary so this dep stays explicit.
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "sync", "time", "signal"] }
# Logging plumbing — env_logger reads RUST_LOG / WZ_DEMO_LOG to
# surface session FSM transitions + subscriber dispatch events.
log = "0.4"
env_logger = "0.11"

# R311a4 — production default forwards wz facade's preset-ap-client
# contract (Linux + tokio + 12 codec features + 7 declare + 6 query +
# liveliness + 8 keyexpr + ...). Measurement runs use
# `--no-default-features --features wz/<explicit-atomic-list>` so each
# preset-ap-client atomic feature can be individually elided to verify
# the catalog truthfulness claim — `scripts/measure-codec-footprint.sh`
# auto-derives the atomic list from `crates/wz/Cargo.toml`'s preset
# definition so the measurement bench stays in sync with future preset
# evolution without duplication in this manifest.
#
# R311g — the consumer-side `codec-close` feature mirror retired with
# the signature-stability retrofit of `send_close_with_reason` in
# wz-runtime-tokio. teardown.rs now calls `send_close_with_reason`
# unconditionally; the wz-runtime-tokio body-cfg silently no-ops when
# the wz facade is built without `codec-close`. This collapses
# ap-demo's feature surface to a single `preset-ap-client` forward and
# removes the measurement-script special case (codec-close minus build
# no longer needs an ap-demo-local feature toggle to keep the call
# site valid). Future R311h..R311l cascades follow the same pattern:
# each `send_*` method on `SessionLinkActions` stays signature-stable,
# its body branches on the matching `codec-*` feature, and consumers
# never need their own mirror.
[features]
default = ["preset-ap-client"]
preset-ap-client = ["wz/preset-ap-client"]

[lints]
workspace = true
