# SPDX-License-Identifier: LGPL-3.0-or-later OR LicenseRef-watching-zenoh-Commercial
# SPDX-FileCopyrightText: Copyright (c) 2026 newmassrael
#
# wz-codecs — generated wire-codec library for the watching-zenoh
# Phase B5 codec SCXMLs.
#
# This crate hosts the sce-codegen Rust output for the codec-kind
# SCXMLs under `sources/codecs/`. build.rs invokes sce-build's
# `compile_forge_with_imports` in-process at compile time so the
# generated code lands in `$OUT_DIR/<stem>.rs` and is `include!()`-ed
# from `src/lib.rs`. No committed Rust codec code exists — the single
# source of truth is the SCXML set.
#
# The Phase 2 walking skeleton (R40) wires only the §6 payload trio
# (msg_put / msg_del) and their dependency chain (timestamp /
# encoding / ext_entry / ext_unit / ext_zint / ext_zbuf). The remaining
# 14 codec SCXMLs (handshake bodies, network envelopes, scouting
# bodies) land in this crate incrementally as Layer 3 wire-interop
# coverage expands. The minimum slice is sufficient to prove
# `sce-codegen → cargo build` compiles end-to-end.

[package]
name = "wz-codecs"
version.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Generated wire codecs from watching-zenoh sources/codecs/ SCXMLs (Phase B5)."
build = "build.rs"

[lib]
name = "wz_codecs"
path = "src/lib.rs"

[features]
# R311a1 — first per-codec feature gates. `codec-init-body` and
# `codec-open-body` gate both build.rs SCXML compilation (CARGO_FEATURE_*
# env var check) and the `pub mod` declaration in lib.rs. Default
# includes both for backward compat: wz-codecs standalone usage (no
# forwarding consumer) sees the full codec catalog as before.
# Downstream wz-runtime-tokio dep declaration switches to
# `default-features = false` + explicit forwards so a facade-level
# `--no-default-features` can actually elide the codec emit/include
# pair (R311a4 wz facade exposes the forwards; R311a2/3 gate the
# session_glue use sites; until then `--no-default-features` at
# wz-runtime-tokio level breaks compile, which is intended).
default = ["alloc", "codec-init-body", "codec-open-body", "codec-keep-alive", "codec-close", "codec-scout", "codec-hello", "codec-join", "codec-response-final", "codec-fragment", "codec-frame", "codec-push"]
alloc = ["sce-forge-runtime/alloc"]
codec-init-body = []
codec-open-body = []
# R311c — `codec-close` gates the SCXML codegen + `pub mod close` and
# the session_glue.rs wire encode/decode + send_close_with_reason +
# bind_unit("send_close_frame_with_reason") on the wz-runtime-tokio
# side. CloseReason enum + set_close_reason_* FSM bindings stay
# unconditional so the FSM script-action surface keeps the same shape;
# only the wire transmit/receive disappears. Feature-off consequence:
# the session has no graceful Close path; peer disconnects trip via
# link-layer drops instead of MID 0x03 + reason byte. honest semantics
# documented in §5.12 codec atomic caveat.
codec-close = []
# R311d batch — scouting + multicast codecs. wz-runtime-tokio does not
# import or reference Scout/Hello/Join types in session_glue.rs; cfg
# gates live exclusively at this crate's `pub mod` blocks + build.rs
# SCXML codegen skip. wz-runtime-tokio still forwards these features
# for facade-level uniformity (a future runtime crate, e.g. a
# scouting-active wz-runtime-scout sibling, could re-use the gates).
# Footprint delta at the wz-ap-demo binary level is ~0 because the
# generated codec code lives behind `pub mod` blocks the binary never
# touches; LTO already discards it. The atomic features remain
# catalog-truthful as wire-spec coverage labels: enabling them surfaces
# the codec types for a downstream consumer that wants Scout/Hello/Join
# wire support.
codec-scout = []
codec-hello = []
codec-join = []
# R311e — codec-response-final gates the SCXML codegen + `pub mod
# response_final` and the session_glue.rs send_response_final +
# build_response_final + encode_frame_with_response_final + the
# `NetworkMessage::ResponseFinal` variant + `parse_frame_payload`
# `N_MID_RESPONSE_FINAL` arm. Feature-off means the queryable side
# loses the terminating-marker emit; downstream z_get futures hang
# until their per-call timeout fires. Honest semantics.
codec-response-final = []
# R311f — codec-fragment gates the SCXML codegen + `pub mod fragment`.
# wz-runtime-tokio does not import Fragment types in session_glue.rs
# (the AP MVP path does not exercise the multi-Frame fragment-
# reassembly state machine yet), so the gate stays at the wz-codecs
# level only — same shape as R311d scout/hello/join. Footprint delta
# at the wz-ap-demo binary is ~0 (LTO already discards Fragment types).
codec-fragment = []
# R311b — `codec-keep-alive` gates both the build.rs SCXML compile pass
# for keep_alive.scxml and the `pub mod keep_alive` include in lib.rs.
# Feature-off elides the empty-body KeepAlive codec entirely; the
# downstream wz-runtime-tokio session_glue.rs `InboundFrame::KeepAlive`
# variant + parse arm + lease-stamp handler are gated on the matching
# `codec-keep-alive` forward so an off build cleanly fall-throughs
# inbound KeepAlive frames to `Unknown { mid }`. Consequence noted in
# the §5.12 codec atomic caveat: with keep-alive off, the session
# lease has no peer-driven refresh path so a long-lived link will
# eventually hit `lease.expired -> Closing(Expired)`. This is the
# honest semantics of `feature off = capability removed`.
codec-keep-alive = []
# R311g — `codec-frame` gates the Frame envelope INBOUND decode path:
# the SCXML codegen + `pub mod frame` at this crate, plus the
# session_glue.rs `InboundFrame::Frame` variant + `parse_inbound`
# `T_MID_FRAME` arm + `parse_frame_payload` + `inbound_to_fsm_event` /
# `poll_and_dispatch_one` Frame match arms on the wz-runtime-tokio
# side. Catalog truthfulness: Frame (MID 0x05) is the transport
# envelope wrapping every NetworkMessage (Push / Request / Response /
# Declare / Interest); a wz session cannot exchange any of those
# bodies without Frame decode. R311g gates only the inbound side
# because the outbound `encode_frame_with_<body>` helpers are
# logically owned by the body codecs themselves — each upcoming
# R311h..R311k body-codec cascade (codec-push / codec-declare /
# codec-request / codec-response) will gate its own outbound helper
# AND declare an implication edge `codec-<body> = ["codec-frame"]`
# so that any body-codec-on build automatically pulls codec-frame on.
# In the R311g interim state codec-frame OFF removes inbound Frame
# decode while outbound emit still produces Frame envelopes; the
# semantically meaningful elision (handshake-only deploy: Init / Open
# / Close + KeepAlive, no NetworkMessage exchange) emerges once the
# body cascades land. Documented in the §5.12 codec atomic caveat.
codec-frame = []
# R311h — `codec-push` gates the SCXML codegen + `pub mod push` and
# the session_glue.rs Push/PushVariant imports + N_MID_PUSH const +
# 8 build_push_* helpers + encode_frame_with_push +
# `NetworkMessage::Push` variant + `parse_frame_payload` `N_MID_PUSH`
# arm + 6 send_push_* methods on SessionLinkActions. Catalog
# truthfulness: Push (MID 0x1D) is the pub/sub data carrier; without
# it the wz pubsub module (pubsub-put / pubsub-delete /
# pubsub-sample) has no wire emit path. wz-runtime-tokio Cargo
# implication edge `codec-push = ["codec-frame", "wz-codecs/codec-push"]`
# guarantees that any codec-push-on build carries the Frame envelope
# too; the reverse (codec-frame OFF + codec-push ON) is rejected at
# the Cargo features layer rather than producing an inert build.
codec-push = []


[dependencies]
# sce-forge-runtime supplies CodecError + SceCursor + per-language
# runtime primitives that the generated codec code references
# (e.g., `use sce_forge_runtime::codec::{CodecError, SceCursor};`).
sce-forge-runtime = { path = "../../vendor/sce/sce-forge-runtime/rust", default-features = false }

[build-dependencies]
# Build-time codegen via SCE's in-process compile entry point. The
# same `compile_forge_with_imports` symbol that
# `vendor/sce/sce-forge-runtime/rust/build.rs` uses for SCE's own
# numerical conformance harness — no subprocess overhead, no stale-
# binary issues.
sce-build = { path = "../../vendor/sce/sce-build" }

[lints]
workspace = true
